k8s/service.yaml
apiVersion: v1

kind: Service

metadata:
  labels:
    app: https-redirect-nodeport
  name: https-redirect-nodeport

spec:
  ports:
    -
      nodePort: 32080
      port: 80
      targetPort: 80
  selector:
    app: https-redirect
  type: NodePort
